# CXXBinaryFrame

./: README.md
BinaryFrame/: CMakeLists.txt  Tutorial_0.cpp
BinaryFrame/Examples/: BasicObjectExample.cpp  BinaryFrameStringExample.cpp  BinaryFrameVectorExample.cpp
BinaryFrame/Headers/: CXXBinaryFrameBinaryStream.h  CXXBinaryFrameFacilitateDynamic.hpp  CXXBinaryFrameFacilitateStatic.h  CXXBinaryFramePointerNode.h  CXXBinaryFrameTypename.h  CXXBinaryLoaderBinaryFrame.hpp
BinaryFrame/Sources/: CXXBinaryFrameBinaryStream.cpp  CXXBinaryFrameFacilitateStatic.cpp  CXXBinaryFramePointerNode.cpp  CXXBinaryFrameTypename.cpp
